--- a/Desafios/des12/estilo/style.css
+++ b/Desafios/des12/estilo/style.css
@@ -1,14 +1,27 @@
 @charset "UTF-8";
 
+/* Importação de fontes do google */
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+/* Criação de variáveis */
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 
 * { /* Configurações gerais */
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100vh; /* Tamanho minimo do HTML e do BODY será 100% da altura da View Height*/
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -24,6 +37,8 @@ header > h1 {
     - FONT-VARIANT variação das letras
     - TEXT-TRANSFORM: uppercase; Transforma todas as letras em maíusculas
     */
+    font-family: var(--fonte2);
+    font-size: 6vw; /* Tamanho da letra baseado na largura da tela */
 }
 
 header > p {
@@ -45,6 +60,12 @@ section { /* Estilos aplicados em todas as SECTIONS */
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 2vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -55,11 +76,26 @@ section.normal {
 section.imagem {
     background-color: rgb(44, 44, 44);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.219);
+    background-size: cover; /* Adequa o tamanho da imagem ao tamanho da tela */
+    background-attachment: fixed; /* Mantem as imagens fixadas */
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block; /* Caixa se adapta ao tamanho do conteúdo */
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.616);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
 }
 
 footer {
